// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mailbox should decrypt full message body: fullMessageBody 1`] = `"Mailchain makes it possible for users. All message contents & attachments are encrypted so only the intended recipient of the message can decrypt and view messages. Messages are stored on decentralized storage."`;

exports[`mailbox should encrypt and post received message: hashedFrom 1`] = `
Array [
  48,
  120,
  49,
  50,
  51,
  52,
  64,
  101,
  116,
  104,
  101,
  114,
  101,
  117,
  109,
  46,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  108,
  111,
  99,
  97,
  108,
]
`;

exports[`mailbox should encrypt and post received message: hashedTo 1`] = `
Array [
  Array [
    48,
    120,
    52,
    51,
    50,
    49,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    52,
    51,
    50,
    49,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    97,
    98,
    99,
    100,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    97,
    98,
    99,
    100,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
]
`;

exports[`mailbox should encrypt and post received message: received message id 1`] = `"5118b83a98441db6bf202a43c7dc6f002418f2f23dd583e14a71a1a81db5a77a"`;

exports[`mailbox should encrypt and post sent message: hashedFrom 1`] = `
Array [
  48,
  120,
  49,
  50,
  51,
  52,
  64,
  101,
  116,
  104,
  101,
  114,
  101,
  117,
  109,
  46,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  108,
  111,
  99,
  97,
  108,
]
`;

exports[`mailbox should encrypt and post sent message: hashedTo 1`] = `
Array [
  Array [
    48,
    120,
    52,
    51,
    50,
    49,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    52,
    51,
    50,
    49,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    97,
    98,
    99,
    100,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
  Array [
    48,
    120,
    97,
    98,
    99,
    100,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    108,
    111,
    99,
    97,
    108,
  ],
]
`;

exports[`mailbox should encrypt and post sent message: sent message id 1`] = `"112574bb1fcf3fe670bdcd14e2dda34de77343509adb8f9a68dc9b16a0414602"`;
